--- a/Android_app/app/src/main/res/layout/activity_main.xml
+++ b/Android_app/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:usesCleartextTraffic="true"
     tools:context=".MainActivity">
-
     <Button
         android:id="@+id/ButtonUploadPhoto"
         android:layout_width="wrap_content"
@@ -14,10 +16,10 @@
         android:layout_marginTop="488dp"
         android:background="#00148C"
         android:backgroundTint="#00148C"
-        android:onClick="onClickChoosePhoto"
+        android:onClick="onClick"
         android:text="Choose photo"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="UsingOnClickInXml" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
