--- a/Android_app/app/src/main/res/layout/activity_main.xml
+++ b/Android_app/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     android:usesCleartextTraffic="true"
     tools:context=".MainActivity">
+
+
     <Button
         android:id="@+id/ButtonUploadPhoto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
+        android:layout_width="116dp"
+        android:layout_height="62dp"
+        android:layout_marginStart="160dp"
         android:layout_marginTop="488dp"
-        android:background="#00148C"
-        android:backgroundTint="#00148C"
-        android:onClick="onClick"
-        android:text="Choose photo"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="UsingOnClickInXml" />
+        android:layout_marginEnd="160dp"
+        android:layout_marginBottom="488dp"
+        android:insetLeft="0dp"
+        android:insetTop="0dp"
+        android:insetRight="0dp"
+        android:insetBottom="0dp"
+        app:cornerRadius="50dp"
+        app:icon="@android:drawable/ic_menu_camera"
+        app:iconGravity="textStart"
+        app:iconPadding="0dp"
+        app:iconSize="35dp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="420dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="1dp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_marginTop="450dp"
+        android:text="TextView"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:gravity="center" />
+
 </RelativeLayout>
